--- a/Desktop/images/my.portfolios/index.html/style.css/style1.css
+++ b/Desktop/images/my.portfolios/index.html/style.css/style1.css
@@ -399,7 +399,7 @@ body {
       justify-content: center;
       align-items: center;
       gap: 40px;
-      margin-bottom: -100px;
+      margin-bottom: 600px;
     
   }
   
@@ -632,7 +632,10 @@ body {
     height: 100vh;
     display: flex;
     margin: auto;
-  
     background-image: url(../../krishna.img.png);
     
+}
+
+.about-ti{
+
 }
